source/blender/gpu/GPU_buffers.h
@@ -113,7 +113,7 @@ struct GPUBatch *GPU_pbvh_buffers_batch_get(GPU_PBVH_Buffers *buffers, bool fast
 
 short GPU_pbvh_buffers_material_index_get(GPU_PBVH_Buffers *buffers);
 
-bool GPU_pbvh_buffers_has_mask(GPU_PBVH_Buffers *buffers);
+bool GPU_pbvh_buffers_has_overlays(GPU_PBVH_Buffers *buffers);
 
 #ifdef __cplusplus
 }
